Fixing some errors on mobile frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,7 @@ body {
     }
 
 .app {
-    height: 50vh;
+    height: 100vh;
 }
 
 .chat_container {
@@ -17,6 +17,7 @@ body {
     padding: 3.5%;
     margin: 7.5% 10% 5% 10%;
     border-radius: 10px;
+    position: sticky;
 }
 
 .chat_container--header {
@@ -24,6 +25,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 5%;
+    margin-top: 15%;
 }
 
 .chat_container--header h1 {
@@ -161,8 +163,6 @@ body {
 
 
 @media screen and (max-width: 500px){
-
-
     .chat_container {
         background-color: transparent;
         padding: 3.5%;
@@ -184,7 +184,7 @@ body {
 
 
     .chat_container--chat_area {
-        max-height:95vh;
+        max-height:50vh;
         overflow-y: auto;
         scrollbar-color: rgb(9, 32, 75) transparent;
         scroll-behavior: auto;
@@ -200,7 +200,8 @@ body {
     }
 
     .messages_container {
-        margin-top: 5%;
+        margin-top: 3%;
+        margin-bottom: 3%;
         position: sticky;
         background-color: rgb(9, 32, 75);
         padding: 10px;
@@ -208,10 +209,21 @@ body {
         justify-content: space-around;
         flex-direction: row;
         border-radius: 5px;
-        top: 100%;
+        top: 75%;
+    }
+
+    .messages_container--sub_button {
+        height: fit-content;
+        padding: 4.3%;
+        margin-left: 3%;
+        border-radius: 5px;
+        background-image: url(message.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        border-color: #328bc1;
     }
 
     .dont_awaiting_message {
-        height: 15%;
+        height: 2%;
     }
 }
