--- a/frontend/src/components/Messages/root.css
+++ b/frontend/src/components/Messages/root.css
@@ -1,3 +1,11 @@
+body {
+    height: 100vh
+}
+
+#root {
+    height: 100%;
+}
+
 .messages_field_container {
     display: flex;
     flex-direction: column;
